# geogrid-agent

./: .gitignore  README.md  pyproject.toml
data/raw/grids/: 725.json  766.json
data/raw/guesses/: 725.json  766.json
scripts/: fetch_grid.py  load_grids.py  load_guesses.py
src/geogrid/: __init__.py  db.py  fetch.py  grid_loader.py  guess_loader.py
src/ingest/: load_square_country_guesses.py
tests/: __init__.py  test_fetch.py  test_grid_loader.py  test_guess_loader.py  test_package.py
